# meshtastic_mini

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
cmake/: NanopbRuntime.cmake  STM32CubeWL.cmake  arm-none-eabi.cmake
docs/: CONNECTING_TO_MESHTASTIC.md  CRYPTO.md  RADIO_EXCHANGE.md  SERIAL_API.md
firmware/Config/: config_store.c  config_store.h
firmware/Core/: debug_uart.c  led.c  led.h  main.c  main_loop.c  serial_io.c  serial_io.h  stm32wlxx_it.c  syscalls_stub.c  system_clock_ll.c
firmware/Crypto/: aes_meshtastic.c  aes_meshtastic.h
firmware/Mesh/: flood_router.c  flood_router.h  mesh_packet.c  mesh_packet.h
firmware/Protobuf/: README.md
firmware/Radio/: lora_meshtastic.c  lora_meshtastic.h  radio_phy.c  radio_phy.h  radio_stm32wl.c  rf_ctrl.c  rf_ctrl.h
firmware/Serial/: serial_framing.c  serial_framing.h
platform/stm32wle5/: STM32WLE5JC.ld
scripts/: check_radio_link.py  dual_serial_monitor.py  init_submodules.sh
